--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@
 
 body {
   background: rgb(231, 231, 231);
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 18px;
 }
 
@@ -32,7 +32,7 @@ select {
   background: var(--cyan);
 }
 
-span[role="image"] {
+span[role='image'] {
   color: transparent;
   text-shadow: 0 0 0 black;
 }
